--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 // Масив файлів моделей, якщо немає моделі буде додано порожній рядок
                 const modelFiles = ["" ,"" ,""];
                 // Масив файлів зображень, якщо немає зображення буде додано також порожній рядок
-                const imageFiles = ["my_name.jpg" ,"developer.jpg" ,"device_photo.jpg"];
+                const imageFiles = ["cat.png" ,"developer.jpg" ,"device_photo.jpg"];
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
                 const videoFiles = ["" ,"" ,""];
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
